[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
serde = { version = "1.0.150", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "sqlite", "macros"]}
actix-rt = "2.0.0"
tokio = { version = "1.20.0", features = ["macros"]}
serde_json = "1.0"
